fix(Datagrid): nested row spacing

--- a/packages/cloud-cognitive/src/components/Datagrid/styles/_useNestedRows.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/_useNestedRows.scss
@@ -7,6 +7,7 @@
 */
 
 @use '@carbon/styles/scss/theme' as *;
+@use '@carbon/styles/scss/spacing' as *;
 @use '../../../global/styles/project-settings' as c4p-settings;
 @use '@carbon/styles/scss/motion' as *;
 @use './variables' as *;
@@ -60,7 +61,7 @@
 
 .#{c4p-settings.$carbon-prefix}--data-table
   td.#{$block-class}__expandable-row-cell {
-  padding-left: 0;
+  padding-left: $spacing-03;
 }
 
 .#{$block-class}__carbon-row-expanded {
